# movie-tracker

./: LICENSE  README.md  database.py  main.py  pyproject.toml  requirements.txt  sql_app.db  tmdb_api_test.py  upcoming.json
migrations/: env.py
migrations/versions/: 6a672fc71752_initial.py
routers/: user.py
services/: user.py
src/: config.py  database.py  main.py
src/movies/: models.py  router.py  schemas.py
src/users/: auth.py  database.py  manager.py  models.py
